<resources>
    <string name="app_name">UpTodo</string>
    <string name="string">UpTodo</string>
    <string name="skip">Skip</string>
    <string name="description_onboard1">onboard1</string>
    <string name="Header_onboard1">your tasks</string>
    <string name="sub_header_onboard1">You can easily manage all of your daily tasks in DoMe for free</string>
    <string name="content_des_onboard1">nav</string>
    <string name="back">back</string>
    <string name="next_btn">Next</string>
    <string name="header_onboard_2">daily routine</string>
    <string name="sub_header_onboard2">In Uptodo you can create your personalized routine to stay productive</string>
    <string name="header_onboard3">your tasks</string>
    <string name="sub_header_onboard3">You can organize your daily tasks by adding your tasks into separate categories</string>
    <string name="Tittle_onboard1">Manage</string>
    <string name="Tittle_onboard2">Create</string>
    <string name="title_onboard3">Organize</string>
    <string name="back_navigation">back_navigation</string>
    <string name="welcome">Welcome to UpTodo</string>
    <string name="description_welcome">Please login to your account or create new account to continue</string>
    <string name="create_account">create account</string>
    <string name="login">Login</string>
    <string name="get_started">get started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Enter your Username</string>
    <string name="prompt_new_task">Enter your Task</string>
    <string name="prompt_password">● ● ● ● ● ● ● ● ● ●</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_with_google">Login with Google</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="fingerprint">fingerprint</string>
    <string name="other_login_choice">other_login_choice</string>
    <string name="index">Index</string>
    <string name="focus">Focus</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="register_with_google">register with google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_task">empty_task</string>
    <string name="what_do_you_want_to_do_today">What do you want to do today?</string>
    <string name="tap_to_add_your_tasks">Tap + to add your tasks</string>
    <string name="filter">filter</string>
    <string name="user_ava">user_ava</string>
    <string name="fab">FAB</string>
    <string name="previous_month">previous_month</string>
    <string name="today">Today</string>
    <string name="next_month">next_month</string>
    <string name="completed">Completed</string>
    <string name="sun">SUN</string>
    <string name="february">February</string>
    <string name="year">2022</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="thu">THU</string>
    <string name="add_task">Add Task</string>
    <string name="settime">setTime</string>
    <string name="finish">finish</string>
    <string name="description">Description</string>
    <string name="flag">flag</string>
    <string name="next_week">Next Week</string>
    <string name="due_date">Due Date</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="flags">flag</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="sport">Sport</string>
    <string name="design">Design</string>
    <string name="university">University</string>
    <string name="create_new">Create New</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="social">Social</string>
    <string name="music">Music</string>
    <string name="health">Health</string>
    <string name="grocery">Grocery</string>
    <string name="category_name">Category name:</string>
    <string name="category_icon">Category icon:</string>
    <string name="create_category">Create Category</string>
    <string name="create_new_category">Create new Category</string>
    <string name="cancel">Cancel</string>
    <string name="choose_color">Choose Color</string>
    <string name="category_color">Category color:</string>
    <string name="choose_icon_from_library">Choose icon from library</string>
    <string name="prompt_category">Category name</string>
</resources>