<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calendar_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/calendar"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/gray_400"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/previous_month"
                android:layout_width="74dp"
                android:layout_height="37dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/previous_month"
                android:src="@drawable/ic_baseline_chevron_left_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/MonthTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/february"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/YearTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/year"
                    android:textAlignment="center"
                    android:textColor="@color/gray_500"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/next_month"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/next_month"
                android:src="@drawable/ic_baseline_chevron_right_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_400"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textColor="@color/red_A100"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thu"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textAlignment="center"
                android:textColor="@color/red_A100"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="301dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner">

            <Button
                android:id="@+id/today_task"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="119dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary"
                android:text="Task"
                android:textColor="@color/white"
                app:strokeColor="@color/gray_100"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/completed_task"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="131dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/gray"
                android:text="@string/completed"
                android:textColor="@color/white"
                app:strokeColor="@color/gray_100"
                app:strokeWidth="2dp" />
        </LinearLayout>

            <FrameLayout
                android:id="@+id/frame_task"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />
        </LinearLayout>

</FrameLayout>